--- a/static/css/index.css
+++ b/static/css/index.css
@@ -100,6 +100,87 @@
   text-align: center;
 }
 
+#chip_package_outline {
+}
+
+.chip_package_pin_table {
+  width: 100%;
+}
+
+.chip_package_pin_m_row {
+  width: 100%;
+}
+
+.pkg_span_lmts20 {
+  overflow: hidden;
+  position: absolute;
+  display: block;
+  width: 50%;
+  padding-right: 128px;
+  transform: translateY(32px);
+  font-size: 13.5px;
+}
+
+.pkg_span_lmqfn32 {
+  overflow: hidden;
+  position: absolute;
+  display: block;
+  width: 50%;
+  padding-right: 128px;
+  transform: translateY(36px);
+  font-size: 15.5px;
+}
+
+.pkg_span_lmqfp32 {
+  overflow: hidden;
+  position: absolute;
+  display: block;
+  width: 50%;
+  padding-right: 128px;
+  transform: translateY(36px);
+  font-size: 15.5px;
+}
+
+.chip_package_pin_lm {
+  text-align: right;
+  width: 100%;
+}
+
+.pkg_span_rmts20 {
+  overflow: hidden;
+  position: absolute;
+  display: block;
+  width: 50%;
+  padding-left: 128px;
+  transform: translate(100%, 32px);
+  font-size: 13.5px;
+}
+
+.pkg_span_rmqfn32 {
+  overflow: hidden;
+  position: absolute;
+  display: block;
+  width: 50%;
+  padding-left: 128px;
+  transform: translate(100%, 36px);
+  font-size: 15.5px;
+}
+
+.pkg_span_rmqfp32 {
+  overflow: hidden;
+  position: absolute;
+  display: block;
+  width: 50%;
+  padding-left: 128px;
+  transform: translate(100%, 36px);
+  font-size: 15.5px;
+}
+
+.chip_package_pin_rm {
+  width: 100%;
+  text-align: left;
+}
+
 .mcu_memories_display {
 }
 
@@ -114,6 +195,7 @@
 .memories_title_row {
   width: 100%;
   text-align: center;
+  font-weight: bold;
 }
 
 .memories_value_row {
